--- a/styles/modules/searchbar.css
+++ b/styles/modules/searchbar.css
@@ -103,7 +103,7 @@
     appearance: none;
     height: 16px;
     margin-top: 16px;
-    background: #e4e4e4;
+    background-color: #e4e4e4;
     border-radius: 1000px;
 }
 
@@ -113,7 +113,7 @@
     width: 25px;
     height: 25px;
     border-radius: 1000px;
-    background: #0E6C8E;
+    background-color: #0E6C8E;
     cursor: pointer;
 }
 
